--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -61,23 +61,23 @@
     <Grid RowDefinitions="68,*,68" ColumnDefinitions="20,*,20"
           BackgroundColor="{DynamicResource DonutBody}">
 
-        <!-- ドーナツ本体メニュー
-             ====================
-        -->
-        <Grid Grid.Row="0" Grid.Column="1"
-              RowDefinitions="20,48" ColumnDefinitions="150,*">
-
-            <!-- 「インポート」 -->
-            <Button Grid.Row="1" Grid.Column="0"
-                    Text="{app:Translate Import}"
-                    Clicked="ImportButton_Clicked"/>
-        </Grid>
-
         <!-- ドーナツの影
              ============
         -->
         <Grid Grid.Row="1" Grid.Column="1" RowDefinitions="68,*,136" ColumnDefinitions="20,*,20"
               BackgroundColor="{DynamicResource DonutShadow}">
+
+            <!-- ドーナツの影メニュー
+                 ====================
+            -->
+            <Grid Grid.Row="0" Grid.Column="1"
+              RowDefinitions="20,48" ColumnDefinitions="150,*">
+
+                <!-- 「インポート」 -->
+                <Button Grid.Row="1" Grid.Column="0"
+                    Text="{app:Translate Import}"
+                    Clicked="ImportButton_Clicked"/>
+            </Grid>
 
             <!-- ドーナツの穴
                  ============
@@ -105,7 +105,8 @@
                             ItemsLayout="{Binding ItemsLayout}"
                             SelectionMode="Single"
                             SizeChanged="CollectionView_SizeChanged"
-                            SelectionChanged="CollectionView_SelectionChanged">
+                            SelectionChanged="CollectionView_SelectionChanged"
+                            BackgroundColor="{DynamicResource DonutHole}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid RowDefinitions="128,20"
