--- a/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login1Page.xaml
@@ -16,35 +16,22 @@
         <viewModels:Login1PageViewModel />
     </ContentPage.BindingContext>
 
-    <!--    画面内タイトルバー
-            ==================
+    <!--    最上段
+            ======
     -->
     <Shell.TitleView>
         <Grid ColumnDefinitions="*,*"
               BackgroundColor="{DynamicResource DonutBody}">
-            <!--    パンくずリスト
-                    ==============
+            <!--    戻るボタン
+                    ==========
             -->
             <HorizontalStackLayout Grid.Column="0"
                                    HorizontalOptions="Start">
 
-                <!--    ［ホーム］ボタン
-                        ================
-                <Button Margin="16,2,2,2"
-                        Text="{app:Translate Home}"
-                        SemanticProperties.Hint="Back to the home"
-                        Clicked="HomeBtn_Clicked">
-                </Button>
-
-                <Label VerticalTextAlignment="Center"
-                       Text="＞"
-                       SemanticProperties.Hint="Separator"/>
+                <!--    アプリケーション名
+                        ==================
                 -->
-
-                <!--    ページ・タイトル
-                        ================
-                -->
-                <Label Text="{app:Translate Login1Page}"
+                <Label Text="{app:Translate _2dRpgNegiramen}"
                        VerticalOptions="Center"
                        HorizontalOptions="Center"
                        FontSize="Large"/>
@@ -61,10 +48,10 @@
         </Grid>
     </Shell.TitleView>
 
-    <!-- ドーナツ本体
+    <!-- 最上段より下
          ============
     -->
-    <Grid RowDefinitions="68,*,68" ColumnDefinitions="20,*,20"
+    <Grid RowDefinitions="0,*,68" ColumnDefinitions="20,*,20"
           BackgroundColor="{DynamicResource DonutBody}">
 
         <!-- ドーナツの影
@@ -76,10 +63,10 @@
             <Grid Grid.Row="0" Grid.Column="1"
                   RowDefinitions="20,48">
                 
-                <!-- 「２Ｄ　ＲＰＧ　ネギラーメン」 -->
+                <!-- ページ・タイトル -->
                 <Label Grid.Row="1"
                        HorizontalOptions="Center"
-                       Text="{app:Translate _2dRpgNegiramen}"
+                       Text="{app:Translate Login1Page}"
                        FontSize="36"/>
             </Grid>
 
