--- a/Visual Studio/2D RPG Negiramen/Views/Login2Page.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/Login2Page.xaml
@@ -12,14 +12,14 @@
         <viewModels:Login2PageViewModel />
     </ContentPage.BindingContext>
 
-    <!--    画面内タイトルバー
-            ==================
+    <!--    最上段
+            ======
     -->
     <Shell.TitleView>
         <Grid ColumnDefinitions="*,*"
               BackgroundColor="{DynamicResource DonutBody}">
-            <!--    パンくずリスト
-                    ==============
+            <!--    戻るボタン
+                    ==========
             -->
             <HorizontalStackLayout Grid.Column="0"
                                    HorizontalOptions="Start">
@@ -33,17 +33,6 @@
                         Clicked="HomeBtn_Clicked">
                 </Button>
 
-                <Label VerticalTextAlignment="Center"
-                       Text="＞"
-                       SemanticProperties.Hint="Separator"/>
-
-                <!--    ページ・タイトル
-                        ================
-                -->
-                <Label Text="{app:Translate Login2Page}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       FontSize="Large"/>
             </HorizontalStackLayout>
 
             <!-- ロケール選択 -->
@@ -57,10 +46,10 @@
         </Grid>
     </Shell.TitleView>
 
-    <!-- ドーナツ本体
+    <!-- 最上段より下
          ============
     -->
-    <Grid RowDefinitions="68,*,68" ColumnDefinitions="20,*,20"
+    <Grid RowDefinitions="0,*,68" ColumnDefinitions="20,*,20"
           BackgroundColor="{DynamicResource DonutBody}">
 
         <!-- ドーナツの影
@@ -72,10 +61,10 @@
             <Grid Grid.Row="0" Grid.Column="1"
                   RowDefinitions="20,48">
 
-                <!-- 「２Ｄ　ＲＰＧ　ネギラーメン」 -->
+                <!-- ページ・タイトル -->
                 <Label Grid.Row="1"
                        HorizontalOptions="Center"
-                       Text="{app:Translate _2dRpgNegiramen}"
+                       Text="{app:Translate Login2Page}"
                        FontSize="36"/>
             </Grid>
 
