--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -12,12 +12,10 @@
              NavigatedTo="thisContentPage_NavigatedTo">
 
     <!--    リソースの用意
-    ======================
-    -->
+            ============== -->
     <ContentPage.Resources>
         <!--    バリデーション
-                ==============
-        -->
+                ============== -->
         <Style x:Key="InvalidEntryStyle" TargetType="Entry">
             <Setter Property="TextColor" Value="Red" />
         </Style>
@@ -31,47 +29,21 @@
         <viewModels:TileCropPageViewModel />
     </ContentPage.BindingContext>
 
-    <!--    画面内タイトルバー
-    ==========================
-    -->
+    <!--    最上段
+            ====== -->
     <Shell.TitleView>
         <Grid ColumnDefinitions="*,*"
               BackgroundColor="{DynamicResource DonutBody}">
-            <!--    パンくずリスト
-                    ==============
-            -->
+            <!--    戻るボタン
+                    ========== -->
             <HorizontalStackLayout Grid.Column="0"
                                    HorizontalOptions="Start">
 
-                <!--    ［ホーム］ラベル
-                        ================
-                -->
-                <Label Margin="16,2,2,2"
-                       VerticalTextAlignment="Center"
-                       Text="{app:Translate Home}"/>
-
-                <Label VerticalTextAlignment="Center"
-                       Text="＞"
-                       SemanticProperties.Hint="Separator"/>
-
                 <!--    ［タイルセット一覧］ボタン
-                        ==========================
-                -->
+                        ==========================-->
                 <Button Margin="2,2,2,2"
                         Text="{app:Translate TilesetList}"
                         Clicked="TilesetListButton_Clicked"/>
-
-                <Label VerticalTextAlignment="Center"
-                       Text="＞"
-                       SemanticProperties.Hint="Separator"/>
-
-                <!--    ページ・タイトル
-                        ================
-                -->
-                <Label Text="{app:Translate TileCrop}"
-                       VerticalOptions="Center"
-                       HorizontalOptions="Center"
-                       FontSize="Large"/>
             </HorizontalStackLayout>
 
             <HorizontalStackLayout Grid.Column="1"
@@ -102,25 +74,25 @@
         </Grid>
     </Shell.TitleView>
 
-    <!-- ドーナツ本体
-    =================
-    -->
-    <Grid RowDefinitions="68,*,68" ColumnDefinitions="20,*,20"
-          BackgroundColor="{DynamicResource DonutBody}">
+    <!--    最上段より下
+            ============ -->
+    <Grid
+        RowDefinitions="*,68" ColumnDefinitions="20,*,20"
+        BackgroundColor="{DynamicResource DonutBody}">
 
-        <!-- ドーナツ本体メニュー
-        =========================
-        -->
-        <Grid Grid.Row="0" Grid.Column="1"
-              RowDefinitions="20,48" ColumnDefinitions="64,64,64,64,64,64,64,64,*">
-
-        </Grid>
-
-        <!-- ドーナツの影
-        =================
-        -->
-        <Grid Grid.Row="1" Grid.Column="1" RowDefinitions="68,*,136" ColumnDefinitions="20,*,20"
+        <!--    ドーナツの影
+                ============ -->
+        <Grid Grid.Row="0" Grid.Column="1" RowDefinitions="68,68,*,136" ColumnDefinitions="20,*,20"
               BackgroundColor="{DynamicResource DonutShadow}">
+
+            <!--    ページ・タイトル
+                    ================ -->
+            <Label
+                Grid.Row="0" Grid.Column="1"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"
+                Text="{app:Translate TileCrop}"
+                FontSize="Large"/>
 
             <!--
                     Row     Height          Description
@@ -128,12 +100,11 @@
                       0      88             上メニュー
                       1       0 or 68       上メニュー（デバッグ用。使う時に広げること）
             -->
-            <Grid Grid.Row="0" Grid.Column="1"
+            <Grid Grid.Row="1" Grid.Column="1"
                   RowDefinitions="68,68">
 
                 <!--    上メニュー
-                ==================
-                -->
+                        ========== -->
                 <Grid Grid.Row="0"
                       RowDefinitions="20,48" ColumnDefinitions="64,64,64,64,64,64,64,64,64,64,64,*">
 
@@ -345,11 +316,12 @@
                 </Grid>
             </Grid>
 
-            <!-- ドーナツの穴
-            =================
-            -->
-            <ScrollView Grid.Row="1" Grid.Column="1"
-                        BackgroundColor="{DynamicResource DonutHole}">
+            <!--    ドーナツの穴
+                    ============ -->
+            <ScrollView
+                Grid.Row="2" Grid.Column="1"
+                BackgroundColor="{DynamicResource DonutHole}">
+                
                 <Grid>
 
                     <!--
@@ -442,9 +414,8 @@
 
 
             <!--    ドーナツの影下部
-                    ================
-            -->
-            <Grid Grid.Row="2" Grid.Column="1">
+                    ================ -->
+            <Grid Grid.Row="3" Grid.Column="1">
                 <!--
                     Row     Height          Description
                     ===     =========       ================================================
